# ova_pocket

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TODO_VAD.txt  docker-compose.yml  index.html  install.bat  main.py  ova  ova.sh  pyproject.toml  reinstall.bat  uninstall.bat  update.bat
ova/: api.py  pipeline.py
profiles/dua/: profile.txt  ref_text.txt
