[project]
name = "ova"
version = "0.2.0"
description = "Outrageous Voice Assistant - Fully local end-to-end voice assistant pipeline using open weight models."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "numpy>=2.3.5",
    "soxr>=1.0.0",
    "torch>=2.9.1",
    "fastapi>=0.128.0",
    "kokoro>=0.9.4",
    #"nemo-toolkit[asr]>=2.6.1",
    "nemo-toolkit[asr]",
    "ollama>=0.6.1",
    "uvicorn>=0.40.0",
    "pip>=25.2",
    "cuda-python>=12.3",
    "pocket-tts>=0.2.0",
    "requests>=2.32.0",
]
